@@ -1,5 +1,6 @@
 package poly.edu.sneaker.Controller;
 
+
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpSession;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -11,11 +12,20 @@ import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.*;
 import org.springframework.web.servlet.mvc.support.RedirectAttributes;
 import poly.edu.sneaker.Model.*;
-import poly.edu.sneaker.Service.ChiTietSanPhamService;
-import poly.edu.sneaker.Service.GioHangChiTietService;
-import poly.edu.sneaker.Service.GioHangService;
-import poly.edu.sneaker.Service.HoaDonService;
+import poly.edu.sneaker.Service.*;
 
+import java.lang.reflect.Array;
+
+import org.springframework.web.servlet.config.annotation.RedirectViewControllerRegistration;
+import org.springframework.web.servlet.view.RedirectView;
+import poly.edu.sneaker.Config.VnPayConfig;
+import poly.edu.sneaker.Model.*;
+import poly.edu.sneaker.Service.*;
+import poly.edu.sneaker.Service.Implement.VnPay;
+
+import java.io.UnsupportedEncodingException;
+import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.*;
 import java.util.stream.Collectors;
 
@@ -31,16 +41,343 @@ public class GioHangController {
     @Autowired
     HoaDonService hoaDonService;
     @Autowired
+    HoaDonChiTietService hoaDonChiTietService;
+    @Autowired
     HttpSession httpSession;
 
+    @Autowired
+    LichSuTrnngThaiService lichSuTrnngThaiService;
+    @Autowired
+    KhuyenMaiService khuyenMaiService;
+    @Autowired
+    private VnPay vnPay;
 
-//    @PostMapping("/thanh-toan")
-//    @ResponseBody
-//    public ResponseEntity<?> thanhToanOnline(@ResponseBody Map<String,Object> sanPhamThanhToan){
-//        HoaDon hoaDon = new  HoaDon();
-//        hoaDon.setMaHoaDon(hoaDonService.taoMaHoaDon());
-//        hoaDon.setThanhTien(sanPhamThanhToan.);
-//    }
+
+    @PostMapping("/ma-giam-gia")
+    @ResponseBody
+    public ResponseEntity<Map<String, Object>> layMaGiamGia(@RequestBody Map<String, String> request) {
+        Map<String, Object> response = new HashMap<>();
+
+        String maKm = request.get("maKhuyenMai");
+        if (maKm == null || maKm.isEmpty()) {
+            response.put("message", "Mã khuyến mãi không hợp lệ");
+            return ResponseEntity.badRequest().body(response);
+        }
+        double tongTien;
+        try {
+            tongTien = Double.parseDouble(request.get("totalPrice"));
+        } catch (NumberFormatException | NullPointerException e) {
+            response.put("message", "Tổng tiền không hợp lệ");
+            return ResponseEntity.badRequest().body(response);
+        }
+
+        KhuyenMai khuyenMai = khuyenMaiService.findByMaKm(maKm);
+        if (khuyenMai != null) {
+            double giaGiam;
+            if (khuyenMai.getLoaiKhuyenMai()) { // Giảm giá theo số tiền
+                giaGiam = khuyenMai.getGiaTriGiam();
+            } else { // Giảm giá theo %
+                double giamGiaPhanTram = (tongTien * khuyenMai.getGiaTriGiam()) / 100;
+                giaGiam = Math.min(giamGiaPhanTram, khuyenMai.getMucGiamGiaToiDa()); // Không vượt quá mức giảm tối đa
+            }
+
+            response.put("message", "Thêm mã khuyến mãi thành công");
+            response.put("giaGiam", giaGiam);
+            return ResponseEntity.ok(response);
+        }
+
+        response.put("message", "Mã khuyến mãi không tồn tại");
+        return ResponseEntity.badRequest().body(response);
+    }
+
+    @PostMapping("/thanh-toan")
+    @ResponseBody
+    public ResponseEntity<?> thanhToanOnline(@RequestBody Map<String, Object> sanPhamThanhToan) {
+
+
+        KhachHang khachHang = (KhachHang) httpSession.getAttribute("khachHangSession");
+        try {
+            if (sanPhamThanhToan == null) {
+                return ResponseEntity.badRequest().body(Collections.singletonMap("message", "Dữ liệu không hợp lệ"));
+            }
+
+            if (sanPhamThanhToan.containsKey("selectedItems")) {
+                return ResponseEntity.badRequest().body(Collections.singletonMap("message", "Sản phẩm không hợp lê"));
+            }
+            KhuyenMai khuyenMai = khuyenMaiService.findById(1);
+            float tongTienGiam = 0;
+            //Nếu true thì là giảm tiền mặt, false là giảm bằng phần trăm
+            if (khuyenMai.getLoaiKhuyenMai()) {
+                tongTienGiam = tongTienGiam + khuyenMai.getGiaTriGiam();
+            } else {
+                tongTienGiam = (Float.parseFloat(sanPhamThanhToan.get("tongTien").toString()) * khuyenMai.getGiaTriGiam()) / 100;
+            }
+            // Tạo hóa đơn mới
+            HoaDon hoaDon = new HoaDon();
+            hoaDon.setMaHoaDon(hoaDonService.taoMaHoaDon());
+            hoaDon.setIdKhuyenMai(khuyenMaiService.findById(1));
+            hoaDon.setIdKhachHang(khachHang);
+            hoaDon.setTenNguoiNhan((String) sanPhamThanhToan.get("hoVaTen"));
+            hoaDon.setSdtNguoiNhan((String) sanPhamThanhToan.get("soDienThoai"));
+            hoaDon.setEmailNguoiNhan((String) sanPhamThanhToan.get("email"));
+            hoaDon.setTinhThanhPho((String) sanPhamThanhToan.get("province"));
+            hoaDon.setQuanHuyen((String) sanPhamThanhToan.get("district"));
+            hoaDon.setPhuongXa((String) sanPhamThanhToan.get("ward"));
+            hoaDon.setDiaChiChiTiet((String) sanPhamThanhToan.get("diaChiCuThe"));
+            hoaDon.setGhiChu((String) sanPhamThanhToan.get("ghiChu"));
+            hoaDon.setTienKhachDua(0);
+
+            hoaDon.setLoaiHoaDon(true);
+            hoaDon.setTienThua(0);
+            hoaDon.setTongTienGiam(tongTienGiam);
+
+
+            // Kiểm tra và parse giá trị float an toàn
+            try {
+                hoaDon.setPhiShip(Float.parseFloat(sanPhamThanhToan.get("tienShip").toString()));
+                hoaDon.setTongTien(Float.parseFloat(sanPhamThanhToan.get("tongTien").toString()));
+
+                hoaDon.setThanhTien(Float.parseFloat(sanPhamThanhToan.get("tongTien").toString()) - tongTienGiam);
+
+            } catch (NumberFormatException e) {
+                return ResponseEntity.badRequest().body("Lỗi định dạng số tiền");
+            }
+
+            hoaDon.setNgayTao(new Date());
+            hoaDon.setDonViGiaoHang("Giao hàng tiết kiệm");
+            hoaDon.setLoaiHoaDon(true);
+            hoaDon.setLoaiThanhToan(true);
+
+            hoaDon.setTrangThai(2);
+
+            // Lưu hóa đơn vào database
+            hoaDonService.save(hoaDon);
+            TrangThaiDonHang trangThaiDonHang = new TrangThaiDonHang();
+            trangThaiDonHang.setTrangThai(hoaDon.getTrangThai());
+            trangThaiDonHang.setGhiChu("Chờ xác nhận");
+            trangThaiDonHang.setIdHoaDon(hoaDon);
+            trangThaiDonHang.setNgayCapNhat(new Date());
+            lichSuTrnngThaiService.saveLichSuTrangThai(trangThaiDonHang);
+            // Lấy danh sách sản phẩm trong giỏ hàng
+            List<Integer> idCTGH = (List<Integer>) sanPhamThanhToan.get("selectedItems");
+            if (idCTGH == null || idCTGH.isEmpty()) {
+                return ResponseEntity.badRequest().body("Danh sách sản phẩm trống!");
+            }
+
+            for (Integer idGioHangChiTiet : idCTGH) {
+                GioHangChiTiet ghct = gioHangChiTietService.findById(idGioHangChiTiet);
+                if (ghct == null) {
+                    return ResponseEntity.badRequest().body("Sản phẩm không tồn tại trong giỏ hàng!");
+                }
+
+                // Tạo hóa đơn chi tiết
+                HoaDonChiTiet hoaDonChiTiet = new HoaDonChiTiet();
+                hoaDonChiTiet.setIdHoaDon(hoaDonService.findById(hoaDon.getId()));
+                hoaDonChiTiet.setSoLuong(ghct.getSoLuong());
+                hoaDonChiTiet.setIdChiTietSanPham(ghct.getIdChiTietSanPham());
+                hoaDonChiTiet.setTongTrongLuong(ghct.getTongTrongLuong());
+                hoaDonChiTiet.setDonGia(ghct.getDonGia());
+                hoaDonChiTiet.setNgayTao(new Date());
+                hoaDonChiTiet.setTrangThai(2);
+
+                // Lưu chi tiết hóa đơn
+                hoaDonChiTietService.saveHoaDonChiTiet(hoaDonChiTiet);
+
+                //Cap nhat số lượng sản phẩm chi tiết
+                ChiTietSanPham chiTietSanPham = chiTietSanPhamService.findById(ghct.getIdChiTietSanPham().getId());
+                if (chiTietSanPham == null) {
+                    return ResponseEntity.badRequest().body("Không tìm thấy chi tiết sản phẩm");
+                }
+                chiTietSanPham.setSoLuong(chiTietSanPham.getSoLuong() - ghct.getSoLuong());
+                chiTietSanPhamService.saveChiTietSanPham(chiTietSanPham);
+                // Xóa sản phẩm khỏi giỏ hàng
+                gioHangChiTietService.deleteGioHangChitiet(ghct.getId());
+
+            }
+
+            return ResponseEntity.ok(Collections.singletonMap("Thanh toán thành công", true));
+
+        } catch (Exception e) {
+            System.out.println(e.getMessage());
+            return ResponseEntity.badRequest().body("Lỗi khi thanh toán: " + e.getMessage());
+        }
+    }
+
+
+
+    @GetMapping("/vnpay-return")
+    public RedirectView vnpayReturn(HttpServletRequest request) {
+        // Kiểm tra tính hợp lệ của giao dịch
+        int paymentStatus = vnPay.orderReturn(request);
+
+        if (paymentStatus == 1) {
+            Map<String, Object> giaoDich = (Map<String, Object>) httpSession.getAttribute("giaoDichTam");
+            if (giaoDich == null) {
+                return new RedirectView("/gio-hang/checkout-failed"); // Chuyển hướng trực tiếp
+
+            }
+
+            // Lấy thông tin khách hàng
+            KhachHang khachHang = (KhachHang) httpSession.getAttribute("khachHangSession");
+
+            // Lấy ID khuyến mãi an toàn
+            Object idKhuyenMaiObj = giaoDich.get("idKhuyenMai");
+            Integer idKhuyenMai = (idKhuyenMaiObj != null) ? Integer.parseInt(idKhuyenMaiObj.toString()) : null;
+            KhuyenMai khuyenMai = (idKhuyenMai != null) ? khuyenMaiService.findById(idKhuyenMai) : null;
+
+            // Tạo hóa đơn mới
+            HoaDon hoaDon = new HoaDon();
+            hoaDon.setMaHoaDon((String) giaoDich.get("maHoaDon"));
+            hoaDon.setIdKhuyenMai(khuyenMai);
+            hoaDon.setIdKhachHang(khachHang);
+            hoaDon.setTenNguoiNhan((String) giaoDich.get("hoVaTen"));
+            hoaDon.setSdtNguoiNhan((String) giaoDich.get("soDienThoai"));
+            hoaDon.setEmailNguoiNhan((String) giaoDich.get("email"));
+            hoaDon.setTinhThanhPho((String) giaoDich.get("province"));
+            hoaDon.setQuanHuyen((String) giaoDich.get("district"));
+            hoaDon.setPhuongXa((String) giaoDich.get("ward"));
+            hoaDon.setDiaChiChiTiet((String) giaoDich.get("diaChiCuThe"));
+            hoaDon.setGhiChu((String) giaoDich.get("ghiChu"));
+
+            try {
+                hoaDon.setTienKhachDua(Float.parseFloat(giaoDich.get("thanhTien").toString()));
+                hoaDon.setPhiShip(Float.parseFloat(giaoDich.get("tienShip").toString()));
+                hoaDon.setTongTien(Float.parseFloat(giaoDich.get("tongTien").toString()));
+                hoaDon.setTongTienGiam(Float.parseFloat(giaoDich.get("tongTienGiam").toString()));
+                hoaDon.setThanhTien(hoaDon.getTongTien() - hoaDon.getTongTienGiam());
+            } catch (NumberFormatException e) {
+                return new RedirectView("/gio-hang/checkout-failed"); // Chuyển hướng trực tiếp
+            }
+
+            hoaDon.setNgayTao(new Date());
+            hoaDon.setDonViGiaoHang("Giao hàng tiết kiệm");
+            hoaDon.setLoaiHoaDon(true);
+            hoaDon.setLoaiThanhToan(false);
+            hoaDon.setTrangThai(6);
+            hoaDonService.save(hoaDon);
+
+            // Lưu lịch sử trạng thái đơn hàng
+            TrangThaiDonHang trangThaiDonHang = new TrangThaiDonHang();
+            trangThaiDonHang.setTrangThai(2);
+            trangThaiDonHang.setGhiChu("Đã thanh toán VNPay - chờ xác nhận");
+            trangThaiDonHang.setIdHoaDon(hoaDon);
+            trangThaiDonHang.setNgayCapNhat(new Date());
+            lichSuTrnngThaiService.saveLichSuTrangThai(trangThaiDonHang);
+
+            // Lấy danh sách sản phẩm
+            List<Integer> idCTGH = (List<Integer>) giaoDich.get("selectedItems");
+            if (idCTGH == null || idCTGH.isEmpty()) {
+                return new RedirectView("/gio-hang/checkout-failed"); // Chuyển hướng trực tiếp
+            }
+
+            for (Integer idGioHangChiTiet : idCTGH) {
+                GioHangChiTiet ghct = gioHangChiTietService.findById(idGioHangChiTiet);
+                if (ghct == null) {
+                    return new RedirectView("/gio-hang/checkout-failed"); // Chuyển hướng trực tiếp
+                }
+
+                // Kiểm tra số lượng sản phẩm trong kho
+                ChiTietSanPham chiTietSanPham = chiTietSanPhamService.findById(ghct.getIdChiTietSanPham().getId());
+                if (chiTietSanPham == null) {
+                    return new RedirectView("/gio-hang/checkout-failed"); // Chuyển hướng trực tiếp
+                }
+                if (chiTietSanPham.getSoLuong() < ghct.getSoLuong()) {
+                    return new RedirectView("/gio-hang/checkout-failed"); // Chuyển hướng trực tiếp
+                }
+
+                // Tạo hóa đơn chi tiết
+                HoaDonChiTiet hoaDonChiTiet = new HoaDonChiTiet();
+                hoaDonChiTiet.setIdHoaDon(hoaDon);
+                hoaDonChiTiet.setSoLuong(ghct.getSoLuong());
+                hoaDonChiTiet.setIdChiTietSanPham(ghct.getIdChiTietSanPham());
+                hoaDonChiTiet.setTongTrongLuong(ghct.getTongTrongLuong());
+                hoaDonChiTiet.setDonGia(ghct.getDonGia());
+                hoaDonChiTiet.setNgayTao(new Date());
+                hoaDonChiTiet.setTrangThai(2);
+                hoaDonChiTietService.saveHoaDonChiTiet(hoaDonChiTiet);
+
+                // Cập nhật số lượng sản phẩm trong kho
+                chiTietSanPham.setSoLuong(chiTietSanPham.getSoLuong() - ghct.getSoLuong());
+                chiTietSanPhamService.saveChiTietSanPham(chiTietSanPham);
+
+                // Xóa sản phẩm khỏi giỏ hàng
+                gioHangChiTietService.deleteGioHangChitiet(ghct.getId());
+            }
+
+            // Xóa session sau khi giao dịch hoàn tất
+            httpSession.removeAttribute("giaoDichTam");
+            httpSession.removeAttribute("khachHangSession");
+
+            return new RedirectView("/gio-hang/checkout-success"); // Chuyển hướng trực tiếp
+        } else if (paymentStatus == 0) {
+            //giao dich that bai
+            return new RedirectView("/gio-hang/checkout-failed"); // Chuyển hướng trực tiếp
+        } else {
+            //Giao dich khong hop le
+            return new RedirectView("/gio-hang/checkout-failed"); // Chuyển hướng trực tiếp
+        }
+    }
+
+    @GetMapping("/checkout-success")
+    public String checkoutSuccess() {
+        return "/user/sanpham/checkoutSuccess";
+    }
+
+    @PostMapping("/vnpay-payment")
+    @ResponseBody
+    public ResponseEntity<?> ThanhToanVNPay(@RequestBody Map<String, Object> sanPhamThanhToan,
+                                            HttpServletRequest request) {
+        KhachHang khachHangSession = (KhachHang) httpSession.getAttribute("khachHangSession");
+
+        // Kiểm tra đăng nhập
+        if (khachHangSession == null) {
+            return ResponseEntity.badRequest().body(Map.of("message", "Bạn chưa đăng nhập"));
+        }
+
+        try {
+            // Kiểm tra dữ liệu đầu vào
+            if (sanPhamThanhToan == null || !sanPhamThanhToan.containsKey("selectedItems")) {
+                return ResponseEntity.badRequest().body(Map.of("message", "Sản phẩm không hợp lệ"));
+            }
+
+            // Lấy tổng tiền và kiểm tra lỗi ép kiểu
+            float tongTien = 0;
+            try {
+                tongTien = Float.parseFloat(String.valueOf(sanPhamThanhToan.get("tongTien")));
+            } catch (NumberFormatException e) {
+                return ResponseEntity.badRequest()
+                        .body(Map.of("message", "Dữ liệu không hợp lệ: tổng tiền không phải số"));
+            }
+
+            // Tính khuyến mãi
+            KhuyenMai khuyenMai = khuyenMaiService.findById(1);
+            float tongTienGiam = (khuyenMai != null && !khuyenMai.getLoaiKhuyenMai())
+                    ? (tongTien * khuyenMai.getGiaTriGiam()) / 100
+                    : (khuyenMai != null ? khuyenMai.getGiaTriGiam() : 0);
+
+            int thanhTien = (int) (tongTien - tongTienGiam);
+            String maHoaDon = hoaDonService.taoMaHoaDon();
+            // Lưu tạm thông tin giao dịch vào session (hoặc Redis, DB nếu cần)
+            Map<String, Object> giaoDichTam = new HashMap<>(sanPhamThanhToan);
+            giaoDichTam.put("idKhachHang", khachHangSession.getId());
+            giaoDichTam.put("maHoaDon", maHoaDon);
+            giaoDichTam.put("idKhuyenMai", khuyenMai.getId());
+            giaoDichTam.put("tongTienGiam", tongTienGiam);
+            giaoDichTam.put("thanhTien", thanhTien);
+            httpSession.setAttribute("giaoDichTam", giaoDichTam);
+            String orderInfo = URLEncoder.encode("Thanh toan don hang" + maHoaDon, StandardCharsets.UTF_8.toString());
+            String baseUrl = request.getScheme() + "://" + request.getServerName() + ":" + request.getServerPort();
+
+            // Tạo URL thanh toán
+            String vnpayUrl = vnPay.createOrder(thanhTien, orderInfo, baseUrl, request);
+            return ResponseEntity.ok(Map.of("redirectUrl", vnpayUrl));
+        } catch (Exception e) {
+            e.printStackTrace();
+            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
+                    .body(Map.of("message", "Lỗi khi thanh toán: " + e.getMessage()));
+        }
+    }
+
     @GetMapping("/thanh-toan")
     public String thanhToan(Model model) {
         KhachHang khachHangSessiong = (KhachHang) httpSession.getAttribute("khachHangSession");
@@ -58,15 +395,20 @@ public class GioHangController {
             model.addAttribute("message", "Giỏ hàng của bạn đang trống!");
             return "redirect:/Sneakers_Nice/hienthi";
         }
+
         double tien = 0;
-        for ( GioHangChiTiet ghct : lstGioHangChiTiet
-             ) {
-            tien= tien+ghct.getTongTien();
+        for (GioHangChiTiet ghct : lstGioHangChiTiet
+        ) {
+            tien = tien + ghct.getTongTien();
         }
         double shippingFee = 65000; // Giả sử phí ship cố định
-        double tongTien = tien+shippingFee;
-        model.addAttribute("shippingFee",shippingFee);
-        model.addAttribute("totalPrice",tongTien);
+        double tongTien = tien + shippingFee;
+        double tongTienGiam = 0;
+
+        model.addAttribute("giamGia", tongTienGiam);
+        model.addAttribute("khachHang", khachHangSessiong);
+        model.addAttribute("shippingFee", shippingFee);
+        model.addAttribute("totalPrice", tongTien);
         model.addAttribute("lstGioHangChiTiet", lstGioHangChiTiet);
         return "/user/sanpham/checkout";
     }
@@ -93,8 +435,14 @@ public class GioHangController {
                 .filter(Objects::nonNull) // Bỏ qua các phần tử null
                 .map(ghct -> {
                     Map<String, Object> map = new HashMap<>();
-                    if (ghct.getIdChiTietSanPham() == null) return map; // Trả về Map rỗng nếu dữ liệu bị thiếu
-
+                    ChiTietSanPham chiTietSanPham = ghct.getIdChiTietSanPham();
+                    if (chiTietSanPham == null) return map; // Trả về Map rỗng nếu dữ liệu bị thiếu
+                    boolean isOutOfStock = chiTietSanPham.getSoLuong() < ghct.getSoLuong() && chiTietSanPham.getSoLuong() > 0;
+                    if (isOutOfStock) {
+                        ghct.setSoLuong(chiTietSanPham.getSoLuong());
+                        gioHangChiTietService.saveGioHangChitiet(ghct);
+                    }
+                    boolean hetHang = chiTietSanPham.getSoLuong() < 0;
                     map.put("tenSanPham", Optional.ofNullable(ghct.getIdChiTietSanPham().getIdSanPham())
                             .map(SanPham::getTenSanPham).orElse("N/A"));
                     map.put("mauSac", Optional.ofNullable(ghct.getIdChiTietSanPham().getIdMauSac())
@@ -106,21 +454,22 @@ public class GioHangController {
                     map.put("soLuong", Optional.ofNullable(ghct.getSoLuong()).orElse(0));
                     map.put("hinhAnh", Optional.ofNullable(ghct.getIdChiTietSanPham().getHinhAnh())
                             .orElse("Không có ảnh"));
-                    map.put("idGioHang", ghct.getIdGioHang());
+                    map.put("isOutOfStock", hetHang); // Cờ báo hết hàng
                     return map;
                 })
                 .collect(Collectors.toList());
 
         double totalPrice = items.stream()
+                .filter(i -> !(boolean) i.get("isOutOfStock")) // Chỉ tính tiền cho sản phẩm còn hàng
                 .mapToDouble(i -> ((Number) i.get("gia")).doubleValue() * ((Number) i.get("soLuong")).intValue())
                 .sum();
 
         return ResponseEntity.ok(Map.of("items", items, "totalPrice", totalPrice));
     }
 
-
     @GetMapping("/so-luong")
     @ResponseBody
+
     public ResponseEntity<Map<String, Integer>> getSoLuongGioHang() {
         KhachHang khachHang = (KhachHang) httpSession.getAttribute("khachHangSession");
         int soLuongSanPham = 0;
@@ -142,6 +491,7 @@ public class GioHangController {
     }
 
     @PostMapping("/them-vao-gio-hang")
+
     public ResponseEntity<?> themSanPhamVaoGioHang(@RequestBody Map<String, Object> sanPhamChon) {
 
         KhachHang khachHang = (KhachHang) httpSession.getAttribute("khachHangSession");
@@ -153,6 +503,7 @@ public class GioHangController {
                 int idMauSac = converToInt(sanPhamChon.get("idMauSac"));
                 ChiTietSanPham chiTietSanPham = chiTietSanPhamService.findCTSPByIdSPAndIdMauSacAndIdSize(idSanPham,
                         idSize, idMauSac);
+
                 if (chiTietSanPham == null) {
                     return ResponseEntity.badRequest()
                             .body(Collections.singletonMap("message", "Sản phẩm không còn hoạt động"));
@@ -171,32 +522,50 @@ public class GioHangController {
                         return ResponseEntity.badRequest()
                                 .body(Collections.singletonMap("message", "Số lượng sản phẩm trong kho không đủ"));
                     }
-                    ghct.setSoLuong(ghct.getSoLuong() + soLuong);
-                    gioHangChiTietService.saveGioHangChitiet(ghct);
-                    return ResponseEntity.ok()
-                            .body(Collections.singletonMap("Thêm sản phẩm vào giỏ hàng thành công", true));
+
+                    float tongTien = 0;
+                    ArrayList<GioHangChiTiet> lstGHCT = gioHangChiTietService.findByIdGioHang(gioHangService.findGioHangByIDKH(khachHang.getId()).getId());
+                    for (GioHangChiTiet gh : lstGHCT
+                    ) {
+                        tongTien = tongTien + gh.getTongTien();
+
+
                 }
-                GioHangChiTiet gioHangChiTiet = new GioHangChiTiet();
-                gioHangChiTiet.setIdGioHang(gioHangService.findGioHangByIDKH(khachHang.getId()));
-                gioHangChiTiet.setIdChiTietSanPham(chiTietSanPham);
-                gioHangChiTiet.setSoLuong(soLuong);
-                gioHangChiTiet.setDonGia(chiTietSanPham.getGiaBan());
-                gioHangChiTiet.setTongTien(gioHangChiTiet.getDonGia() * soLuong);
-                gioHangChiTiet.setNgayTao(new Date());
-                gioHangChiTiet.setTrangThai(true);
-                gioHangChiTietService.saveGioHangChitiet(gioHangChiTiet);
-                return ResponseEntity.ok(Collections.singletonMap("Thêm sản phẩm vào giỏ hàng thành công", true));
 
-            } catch (Exception e) {
-                e.printStackTrace();
-                return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
-                        .body(Collections.singletonMap("message", "Lỗi khi cập nhật sản phẩm!"));
+                if (tongTien + chiTietSanPham.getGiaBan() * soLuong > 20000000) {
+                    return ResponseEntity.badRequest().body(Collections.singletonMap("message", "Đơn hàng vượt quá 20 triệu vui lòng liên hệ để được hỗ trợ"));
+                }
+                ghct.setSoLuong(ghct.getSoLuong() + soLuong);
+
+                gioHangChiTietService.saveGioHangChitiet(ghct);
+                return ResponseEntity.ok()
+                        .body(Collections.singletonMap("Thêm sản phẩm vào giỏ hàng thành công", true));
             }
-        } else {
-            return ResponseEntity.badRequest().body(Map.of("message", "Bạn cần đăng nhập để mua sắm"));
-        }
+            GioHangChiTiet gioHangChiTiet = new GioHangChiTiet();
+            gioHangChiTiet.setIdGioHang(gioHangService.findGioHangByIDKH(khachHang.getId()));
+            gioHangChiTiet.setIdChiTietSanPham(chiTietSanPham);
+            gioHangChiTiet.setSoLuong(soLuong);
+            gioHangChiTiet.setDonGia(chiTietSanPham.getGiaBan());
+            gioHangChiTiet.setTongTien(gioHangChiTiet.getDonGia() * soLuong);
+            gioHangChiTiet.setTongTrongLuong(chiTietSanPham.getSoLuong() * chiTietSanPham.getSoLuong());
+            gioHangChiTiet.setNgayTao(new Date());
+            gioHangChiTiet.setTrangThai(true);
+            gioHangChiTietService.saveGioHangChitiet(gioHangChiTiet);
+            return ResponseEntity.ok(Collections.singletonMap("Thêm sản phẩm vào giỏ hàng thành công", true));
 
+        } catch(Exception e){
+            e.printStackTrace();
+            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
+                    .body(Collections.singletonMap("message", "Lỗi khi cập nhật sản phẩm!"));
+        }
+    } else
+
+    {
+
+        return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(Map.of("message", "Bạn cần đăng nhập để mua sắm"));
     }
+
+}
 
     @DeleteMapping("/remove/{id}")
     public ResponseEntity<?> removeSanPham(@PathVariable int id) {
@@ -208,12 +577,21 @@ public class GioHangController {
     @PutMapping("/capNhatSoLuongGioHang/{idGHCT}")
     public ResponseEntity<?> capNhatSoLuongGioHang(@PathVariable int idGHCT, @RequestParam int soLuong) {
         GioHangChiTiet gioHangChiTiet = gioHangChiTietService.findById(idGHCT);
+        ArrayList<GioHangChiTiet> lstGHCT = gioHangChiTietService.findByIdGioHang(idGHCT);
+        float tongTien = 0;
+        for (GioHangChiTiet ghct : lstGHCT
+        ) {
+            tongTien = tongTien + ghct.getTongTien();
+        }
         if (gioHangChiTiet != null) {
             ChiTietSanPham chiTietSanPham = chiTietSanPhamService
                     .findById(gioHangChiTiet.getIdChiTietSanPham().getId());
+
             if (chiTietSanPham.getSoLuong() < soLuong) {
                 return ResponseEntity.badRequest()
                         .body(Collections.singletonMap("message", "Số lượng sản phẩm trong kho không đủ"));
+            } else if (chiTietSanPham.getGiaBan() * soLuong + tongTien > 20000000) {
+                return ResponseEntity.badRequest().body(Collections.singletonMap("message", "Đơn hàng vượt quá 20 triệu, liên hệ để được hỗ trợ"));
             } else {
                 gioHangChiTiet.setSoLuong(soLuong);
                 gioHangChiTietService.saveGioHangChitiet(gioHangChiTiet);
